@@ -322,7 +322,7 @@ MODx.panel.WebLink = function(config) {
         xtype: 'modx-panel-resource-tv'
         ,resource: config.resource
         ,class_key: config.record.class_key || 'modWebLink'
-        ,template: config.record.template || MODx.config.default_template
+        ,template: config.record.template
         
     });
     if (config.access_permissions) {
