@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#2744] Fix bug with empty template and TV values
 - [#2841] Fix bug with File Edit page and modFileHandler reference
 - [#2839] Fix bug with failed login count not being updated
 - Add ability to view permissions inherited when viewing an ACL row in a grid
